--- a/sw/src/Lab3.uvprojx
+++ b/sw/src/Lab3.uvprojx
@@ -509,6 +509,11 @@
               <FileType>5</FileType>
               <FilePath>.\Switches.h</FilePath>
             </File>
+            <File>
+              <FileName>Display.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Display.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
